--- a/profile.html
+++ b/profile.html
@@ -59,18 +59,18 @@
     <p><b>Email:</b> <span id="userEmail">Loading...</span></p>
     <p><b>XP:</b> <span id="userXP">0</span></p><h3>🎨 Choose Avatar (Anime Style)</h3>
 <div class="avatar" id="avatarGallery">
-  <img src="/avatars/naruto.png" alt="Naruto" data-name="naruto" />
-  <img src="/avatars/luffy.png" alt="Luffy" data-name="luffy" />
-  <img src="/avatars/zoro.png" alt="Zoro" data-name="zoro" />
-  <img src="/avatars/makima.png" alt="Makima" data-name="Makima" />
+  <img src="/avatar/naruto.png" alt="Naruto" data-name="naruto" />
+  <img src="/avatar/luffy.png" alt="Luffy" data-name="luffy" />
+  <img src="/avatar/zoro.png" alt="Zoro" data-name="zoro" />
+  <img src="/avatar/makima.png" alt="Makima" data-name="Makima" />
   <img src="/avatars/nami.png" alt="Nami" data-name="Nami" />
-<img src="/avatars/Hinata.png" alt="Hinata" data-name="Hinata" />
-<img src="/avatars/gojo.png" alt="Gojo" data-name="gojo" />
-<img src="/avatars/Robin.png" alt="Robin" data-name="Robin" />
-<img src="/avatars/Sanji.png" alt="Sanji" data-name="Sanji" />
-<img src="/avatars/itachi.png" alt="itachi" data-name="itachi" />
+<img src="/avatars/inata.png" alt="Hinata" data-name="Hinata" />
+<img src="/avatar/gojo.png" alt="Gojo" data-name="gojo" />
+<img src="/avatar/Robin.png" alt="Robin" data-name="Robin" />
+<img src="/avatar/Sanji.png" alt="Sanji" data-name="Sanji" />
+<img src="/avatar/itachi.png" alt="itachi" data-name="itachi" />
 
-<img src="/avatars/goku.png" alt="Goku" data-name="goku" />
+<img src="/avatar/goku.png" alt="Goku" data-name="goku" />
 </div>
 
 
